--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,78 +1,69 @@
-# This workflow will build and push a node.js application to an Azure Web App when a commit is pushed to your default branch.
-#
-# This workflow assumes you have already created the target Azure App Service web app.
-# For instructions see https://docs.microsoft.com/en-us/azure/app-service/quickstart-nodejs?tabs=linux&pivots=development-environment-cli
-#
-# To configure this workflow:
-#
-# 1. Download the Publish Profile for your Azure Web App. You can download this file from the Overview page of your Web App in the Azure Portal.
-#    For more information: https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#generate-deployment-credentials
-#
-# 2. Create a secret in your repository named AZURE_WEBAPP_PUBLISH_PROFILE, paste the publish profile contents as the value of the secret.
-#    For instructions on obtaining the publish profile see: https://docs.microsoft.com/azure/app-service/deploy-github-actions#configure-the-github-secret
-#
-# 3. Change the value for the AZURE_WEBAPP_NAME. Optionally, change the AZURE_WEBAPP_PACKAGE_PATH and NODE_VERSION environment variables below.
-#
-# For more information on GitHub Actions for Azure: https://github.com/Azure/Actions
-# For more information on the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples
+name: Etsy Promotion Code
 
 on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-env:
-  AZURE_WEBAPP_NAME: your-app-name    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '20.x'                # set this to the node version to use
-
-permissions:
-  contents: read
+  workflow_dispatch:  # Allow manual trigger
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  scan-codes:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        test-file: ['git_sele1.py', 'git_sele2.py', 'git_sele3.py', 'git_sele4.py', 'git_sele5.py']
+        include:
+          - test-file: 'git_sele1.py'
+            results-file: 'results1.json'
+          - test-file: 'git_sele2.py'
+            results-file: 'results2.json'
+          - test-file: 'git_sele3.py'
+            results-file: 'results3.json'
+          - test-file: 'git_sele4.py'
+            results-file: 'results4.json'
+          - test-file: 'git_sele5.py'
+            results-file: 'results5.json'
+      fail-fast: false  # Continue with other jobs even if one fails
+    
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v3
+    - uses: browser-actions/setup-chrome@v1
+      with: 
+        chrome-version: 132
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-
-    - name: npm install, build, and test
+        python-version: '3.9'
+    
+    
+    - name: Install Python dependencies
       run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v4
+        python -m pip install --upgrade pip
+        pip install -U selenium
+        pip install webdriver-manager
+        
+    - name: Run scanner - ${{ matrix.test-file }}
+      run: python ${{ matrix.test-file }}
+        
+    - name: Upload Results - ${{ matrix.test-file }}
+      uses: actions/upload-artifact@v3
+      if: always()
       with:
-        name: node-app
-        path: .
+        name: scan-results-${{ matrix.test-file }}-${{ github.run_number }}
+        path: |
+          ${{ matrix.results-file }}
+          promotion_results.txt
+        retention-days: 90
 
-  deploy:
-    permissions:
-      contents: none
+  combine-results:
+    needs: scan-codes
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
     steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v4
+    - name: Download all artifacts
+      uses: actions/download-artifact@v3
+      
+    - name: Upload Combined Results
+      uses: actions/upload-artifact@v3
       with:
-        name: node-app
-
-    - name: 'Deploy to Azure WebApp'
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        name: all-scan-results-${{ github.run_number }}
+        path: |
+          scan-results-*
+        retention-days: 90
